@@ -1,3 +1,7 @@
+w17 2023-05-12 13:14:32+03:00 - build 335
+
+1. add PF_RECURSIVEPANEL flag
+
 w17 2023-04-29 14:33:51+03:00 - build 334
 
 1. Correct 333
@@ -202,7 +206,7 @@ w17 2018-04-19 20:39:37+03:00 - build 287
 
 w17 2018-04-18 18:07:52+03:00 - build 286
 
-1. Поддержка внешних .dll форат + кодек (обязательно в Formats/*.format)
+1. Поддержка внешних .dll формат + кодек (обязательно в Formats/*.format)
 
 w17 2018-04-16 19:30:56+03:00 - build 285
 
