@@ -1,3 +1,10 @@
+--------------------------------------------------------------------------------
+w17 2023-05-12 14:00:05+03:00 - build 6140
+
+1. Continue 6134.
+   gh-680: Enable Recursive Plugin Panels for Plugin.Command Calls
+
+--------------------------------------------------------------------------------
 w17 2023-05-12 12:06:40+03:00 - build 6139
 
 1. https://bugs.farmanager.com/view.php?id=3447
